# atlas

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.codex/environments/: environment.toml
.github/workflows/: ci.yml
.superpowers/sdd/: task-1-report.md  task-4-report.md
apps/macos/: Package.swift
apps/macos/Sources/RSIAtlasApp/App/: RSIAtlasApp.swift
apps/macos/Sources/RSIAtlasApp/Models/: WorkspaceDestination.swift
apps/macos/Sources/RSIAtlasApp/Support/: DocumentAdmissionPresentation.swift  HealthStatePresentation.swift  QAPresentationOptions.swift
apps/macos/Sources/RSIAtlasApp/Views/: CanonicalPageEvidenceView.swift  CommandCenterView.swift  ComponentStatusRow.swift  ContentView.swift  EvidenceAccessibility.swift  EvidenceImportView.swift  ResearchSurfaces.swift  RuntimeAccessibility.swift  SidebarView.swift
apps/macos/Sources/RSIAtlasCore/Models/: CanonicalDocument.swift  DocumentAdmission.swift  SystemStatus.swift  WorkspaceSurfaceModels.swift
apps/macos/Sources/RSIAtlasCore/Services/: BoundedFileUploader.swift  DocumentImportClient.swift  DocumentProcessingClient.swift  EngineClient.swift  LocalEngineConfiguration.swift  LocalEngineHTTP.swift  LocalEngineSupervisor.swift  WorkspaceSurfaceClients.swift
apps/macos/Sources/RSIAtlasCore/Stores/: CommandCenterStore.swift  DocumentImportStore.swift  DocumentProcessingStore.swift  WorkspaceSurfaceStores.swift
apps/macos/Tests/RSIAtlasAppTests/: EvidencePresentationTests.swift  RuntimePresentationTests.swift
apps/macos/Tests/RSIAtlasCoreTests/: BoundedFileUploaderTests.swift  CommandCenterStoreTests.swift  DocumentAdmissionDecodingTests.swift  DocumentImportClientTests.swift  DocumentImportStoreTests.swift  DocumentProcessingDecodingTests.swift  EngineClientTests.swift  LocalEngineHTTPTests.swift  LocalEngineSupervisorTests.swift  SystemStatusDecodingTests.swift
apps/macos/Tests/RSIAtlasCoreTests/Fixtures/: document_admission_v1.json  system_status_v1.json  system_status_v1_1.json
docs/: acceptance-matrix.md  production-plan.md
docs/dependency-governance/: docling-status.md  duckdb-analytics-approval.md  embedding-model-approval.md  live-collector-approval.md  ocr-approval.md  pdf-parser-approval.md  pdf-parser-candidates.json  reranker-approval.md
docs/release/: entitlement-matrix.md  signing-notarization-blockers.md
docs/superpowers/plans/: 2026-07-18-foundation-runtime-status.md  2026-07-18-full-product-delivery-roadmap.md  2026-07-18-phase-1-durable-local-runtime.md  2026-07-18-phase-2a-secure-document-admission.md  2026-07-19-must-have-closure.md  2026-07-19-phase-2b-governed-parser-canonical-pages.md  2026-07-19-phase-2c-five-chunkers.md  2026-07-19-phase-2d-indexes-atomic-publication.md  2026-07-19-phase-3-hybrid-retrieval-evidence-packet.md  2026-07-19-phase-3-hybrid-retrieval-research.md  2026-07-19-phase-4-multi-chain-quantitative-data.md  2026-07-19-phase-5-monitoring-comparison-stub.md  2026-07-19-phase-5-monitoring-comparison.md  2026-07-19-phase-6-engineering-release-stub.md  2026-07-19-phase-6-engineering-release.md  2026-07-20-truth-gates-readiness.md
docs/superpowers/specs/: 2026-07-18-rsi-atlas-design.md  2026-07-20-worker-supervision-runtime-closeout-design.md
fixtures/evaluation/: retrieval_regression_v1.json  sealed_holdout_v1.json
fixtures/monitoring/: triage_calibration_v1.json
infra/local/: postgres.sh  secure_path.py
infra/release/: RSIAtlasEngine.c
infra/security/: document-worker.sb  process-capabilities.json  verify_zero_egress.py
infra/security/tests/: test_document_worker_sandbox.py
migrations/: 0001_foundation.sql  0002_immutable_artifact_contents.sql  0003_document_admission.sql  0004_document_admission_invariants.sql  0005_document_preflight.sql  0006_canonical_documents.sql  0007_chunk_sets.sql  0008_retrieval_indexes.sql  0009_retrieval_research_runs.sql  0010_structured_observations.sql  0011_monitoring_alerts.sql  0012_research_workflow_attempts.sql
plans/active/: 2026-07-20-embedded-runtime-closure.md  2026-07-20-release-assembly-foundation.md  2026-07-20-worker-supervision-runtime-closeout.md  2026-07-20-zero-egress-timeout-hardening.md
plans/archive/: 2026-07-20-release-assembly-foundation.md  2026-07-20-worker-supervision-runtime-closeout.md  2026-07-20-zero-egress-timeout-hardening.md  2026-07-21-embedded-runtime-closure-reflection.md
script/: assemble_release_app.py  audit_pdf_parser_dependencies.py  build_and_run.sh  build_pdf_benchmark_fixtures.py  build_release_runtime.py  check_release_runtime.py  codex_full_regression.sh  generate_sbom.py  install_embedding_model.py  package_release.sh  recovery_harness.sh  release_check.py  run_engine.py  run_sealed_promotion.py  sign_and_notarize.sh  wait_engine_ipc.py
services/engine/: pyproject.toml
services/engine/src/rsi_atlas_engine/: __init__.py  __main__.py  api.py  cli.py  collectors.py  diagnostics.py  embedded_postgres.py  import_staging.py  ingestion.py  ipc_auth.py  monitoring.py  phase6.py  research.py  runtime.py  safe_mode.py  server.py
services/engine/tests/: test_api.py  test_cli.py  test_collectors_api.py  test_diagnostics.py  test_document_processing_api.py  test_embedded_postgres.py  test_import_staging.py  test_ingestion_api.py  test_ingestion_services.py  test_ipc_auth.py  test_monitoring_api.py  test_phase6_api.py  test_research_api.py  test_runtime.py  test_safe_mode_paths.py  test_server.py
tests/: test_install_embedding_model.py  test_pdf_parser_dependency_governance.py  test_public_repository_metadata.py  test_wait_engine_ipc.py
