[project]
name = "rsi-atlas-workspace"
version = "0.1.0"
requires-python = ">=3.11,<3.15"
dependencies = [
  "rsi-atlas-contracts",
  "rsi-atlas-engine",
  "rsi-atlas-security",
  "rsi-atlas-storage",
]

[dependency-groups]
dev = [
  "httpx2==2.7.0",
  "mypy==2.3.0",
  "pytest==9.1.1",
  "ruff==0.15.22",
]

[tool.uv.sources]
rsi-atlas-contracts = { workspace = true }
rsi-atlas-engine = { workspace = true }
rsi-atlas-security = { workspace = true }
rsi-atlas-storage = { workspace = true }

[tool.uv.workspace]
members = [
  "packages/contracts",
  "packages/security",
  "packages/storage",
  "services/engine",
]

[tool.pytest.ini_options]
testpaths = [
  "packages/contracts/tests",
  "packages/security/tests",
  "packages/storage/tests",
  "services/engine/tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
mypy_path = [
  "packages/contracts/src",
  "packages/security/src",
  "packages/storage/src",
  "services/engine/src",
]
