[project]
name = "rsi-atlas-workspace"
version = "0.1.0"
requires-python = ">=3.11,<3.15"
dependencies = [
  "rsi-atlas-collectors",
  "rsi-atlas-contracts",
  "rsi-atlas-document-worker",
  "rsi-atlas-engine",
  "rsi-atlas-engineering",
  "rsi-atlas-evaluation",
  "rsi-atlas-ingestion",
  "rsi-atlas-models",
  "rsi-atlas-monitoring",
  "rsi-atlas-observability",
  "rsi-atlas-research",
  "rsi-atlas-retrieval",
  "rsi-atlas-security",
  "rsi-atlas-storage",
]

[dependency-groups]
dev = [
  "httpx2==2.7.0",
  "mypy==2.3.0",
  "pytest==9.1.1",
  "ruff==0.15.22",
]

[tool.uv.sources]
rsi-atlas-collectors = { workspace = true }
rsi-atlas-contracts = { workspace = true }
rsi-atlas-document-worker = { workspace = true }
rsi-atlas-engine = { workspace = true }
rsi-atlas-engineering = { workspace = true }
rsi-atlas-evaluation = { workspace = true }
rsi-atlas-ingestion = { workspace = true }
rsi-atlas-models = { workspace = true }
rsi-atlas-monitoring = { workspace = true }
rsi-atlas-observability = { workspace = true }
rsi-atlas-research = { workspace = true }
rsi-atlas-retrieval = { workspace = true }
rsi-atlas-security = { workspace = true }
rsi-atlas-storage = { workspace = true }

[tool.uv.workspace]
members = [
  "packages/collectors",
  "packages/contracts",
  "packages/document_worker",
  "packages/engineering",
  "packages/evaluation",
  "packages/ingestion",
  "packages/models",
  "packages/monitoring",
  "packages/observability",
  "packages/research",
  "packages/retrieval",
  "packages/security",
  "packages/storage",
  "services/engine",
]

[tool.pytest.ini_options]
testpaths = [
  "packages/collectors/tests",
  "packages/contracts/tests",
  "packages/document_worker/tests",
  "packages/engineering/tests",
  "packages/evaluation/tests",
  "packages/ingestion/tests",
  "packages/models/tests",
  "packages/monitoring/tests",
  "packages/observability/tests",
  "packages/research/tests",
  "packages/retrieval/tests",
  "packages/security/tests",
  "packages/storage/tests",
  "services/engine/tests",
  "infra/security/tests",
  "tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
exclude = "(^|/)tests/"
mypy_path = [
  "packages/collectors/src",
  "packages/contracts/src",
  "packages/document_worker/src",
  "packages/engineering/src",
  "packages/evaluation/src",
  "packages/ingestion/src",
  "packages/models/src",
  "packages/monitoring/src",
  "packages/observability/src",
  "packages/research/src",
  "packages/retrieval/src",
  "packages/security/src",
  "packages/storage/src",
  "services/engine/src",
]
