[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "rsi-atlas-engine"
version = "0.1.0"
description = "Local deterministic control plane for RSI Atlas"
requires-python = ">=3.11,<3.15"
dependencies = [
  "fastapi==0.139.2",
  "rsi-atlas-collectors",
  "rsi-atlas-contracts",
  "rsi-atlas-ingestion",
  "rsi-atlas-models",
  "rsi-atlas-observability",
  "rsi-atlas-research",
  "rsi-atlas-retrieval",
  "rsi-atlas-security",
  "rsi-atlas-storage",
  "uvicorn==0.51.0",
]

[project.scripts]
atlas = "rsi_atlas_engine.cli:entrypoint"

[tool.uv.sources]
rsi-atlas-collectors = { workspace = true }
rsi-atlas-contracts = { workspace = true }
rsi-atlas-ingestion = { workspace = true }
rsi-atlas-models = { workspace = true }
rsi-atlas-observability = { workspace = true }
rsi-atlas-research = { workspace = true }
rsi-atlas-retrieval = { workspace = true }
rsi-atlas-security = { workspace = true }
rsi-atlas-storage = { workspace = true }
